# The-Nothingness-Effect

./: .gitignore  .gitmodules  README.md  __init__.py  conftest.py  fields_of_physics_in_dev_audit.csv  fields_of_physics_in_dev_audit.json  pyproject.toml  pytest.ini  requirements-ai.txt  requirements-dev.txt  requirements-interactive.txt  requirements-mpl-tc.txt  requirements.txt  the_nothingness_effect.py
docs/: empirical_comparison.md  fields_of_physics_in_dev_audit.md  hawking_theoretical_benchmark.md  locality_driven_spiral_model.md  missing_paper_figures.md  private_authoritative_archive_delivery.md  revised_appendix_consistency.md  theorem_complex_traceability.md  tne_ai_derivation_integration_report.md  tne_ai_output_capabilities.md  tne_ai_theorem_complex_usage_assessment.md  tne_animation_artifacts.md  tne_appendix_repository_consistency_report.md  tne_artifact_generation_report.md  tne_artifact_provenance_report.md  tne_blocked_upstream_source_law_outline.md  tne_decision_ledger.md  tne_final_qa_report.md  tne_import_migration_report.md  tne_multimodal_architecture.md  tne_open_implementation_gaps.md  tne_producer_local_repository_layout.md  tne_repository_architecture_migration_report.md  tne_source_law_registry.md  tne_test_and_simulation_report.md  tne_theorem_complex_implementation_status.md  tne_theorem_complex_layout_report.md
empirical/: __init__.py  io.py  metrics.py
equations/: animation_artifacts_metadata.json  animation_artifacts_summary.csv  animation_io.py  black_hole_dynamics.py  dubler_effect.py  fluctuation_elastic_artifacts.py  gravitational_contract_artifacts.py  gravitational_contract_runtime.py  locality_driven_gravity.py  noether_tne.py  run_animation_artifacts.py
fields_of_physics_in_dev/: fields_of_physics_in_dev_audit.csv  fields_of_physics_in_dev_audit.json  the_nothingness_effect.py
private_authority/: .blob-probe  .delivery-probe  .delivery_probe  .tree-probe  README.md  TNE_Authoritative_Appendices.zip.enc  _ciphertext_hex_probe.txt
reports/: ai_derivation_integration_matrix.csv  artifact_manifest.json  closure_obligation_ledger.csv  closure_obligation_ledger.json  effective_artifact_provenance_binding.json  effective_theorem_complex_implementation_matrix.csv  effective_theorem_complex_implementation_matrix.json  equation_implementation_alignment.csv  equation_implementation_alignment.json  final_qa_manifest.json  formal_proof_coverage.csv  formal_proof_coverage.json  layout_verification_manifest.json  release_status_dimensions.csv  release_status_dimensions.json  repository_file_revision_status.csv  repository_path_manifest.json  simulation_execution_manifest.json  source_law_registry.json  test_execution_manifest.json  theorem_artifact_coverage.json  theorem_complex_implementation_matrix.csv  theorem_complex_manifest.json
simulations/: __init__.py  run_black_hole_dynamics_section18.py  run_dubler_effect_figure31.py  run_elastic_pi_ripple_figure7.py  run_locality_spiral_figure6.py  run_missing_paper_figures.py  run_noether_figures48_49.py
tests/: test_black_hole_dynamics.py  test_dubler_effect.py  test_elastic_pi_ripples.py  test_locality_driven_gravity.py  test_missing_figure_outputs.py  test_noether_tne.py
the_nothingness_effect/: __init__.py
theoretical_benchmarks/: __init__.py  benchmark_summary.md
tne_concepts/: elastic_dubler_effect.py
tne_runtime/: __init__.py
tools/: activate_dependency_sources_phase2.py  apply_authoritative_alignment_phase1.py  apply_contract_recertification.py  build_closure_obligation_ledger.py  build_completeness_overrides.py  build_consistency_inventory.py  build_equation_implementation_alignment.py  build_final_migration_reports.py  build_final_qa_manifest.py  build_final_qa_manifest_recertified.py  build_formal_proof_coverage.py  build_immutable_release_qa.py  build_pgqenn_overrides.py  build_physical_contract_overrides.py  build_qenn_overrides.py  build_release_status_dimensions.py  build_revision_plan_overrides.py  build_soinets_overrides.py  build_theorem_complex_layout.py  check_no_authoritative_appendices.py  collect_hf_audio_datasets.py  consistency_catalog.py  download_verified_cifar_archives.py  dtqc_2d_repair.pyz.b64  dtqc_legacy_faithful_final.yml  enforce_authoritative_archive_gate.py  export_effective_theorem_matrix.py  generate_artifact_provenance.py  generate_complete_theorem_artifacts.py  migrate_architecture_imports.py  (+23 more)
(+2858 files in other folders)
