[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "the-nothingness-effect"
version = "0.3.0"
description = "Typed theorem-complex runtime and bounded computational models for The Nothingness Effect"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Research repository; see repository terms"}
dependencies = [
  "numpy>=2.0",
  "pandas>=2.2",
  "matplotlib>=3.8",
  "scipy>=1.13",
  "sympy>=1.12",
]

[project.optional-dependencies]
ai = ["torch>=2.13,<2.14"]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-xdist>=3.6",
  "hypothesis>=6.100",
  "ruff>=0.9",
  "mypy>=1.13",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
  "the_nothingness_effect*",
  "empirical*",
  "fields_of_physics_in_dev*",
]
exclude = ["tests*", "docs*"]

[tool.pytest.ini_options]
python_files = ["test_*.py"]
pythonpath = ["."]
addopts = "-ra"
filterwarnings = [
  "default",
]

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = [
  "fields_of_physics_in_dev",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true

[tool.tne.dependencies."mpl-tc"]
repository = "https://github.com/pt2710/MPL-TC.git"
commit = "056e346824e9ec9785ab45b642b3b842c88f6e56"
path = "dependencies/MPL-TC"
module = "mccrackns_prime_law.py"
module-sha256 = "484e8a6326e99657eacc3e3a02b245e4709d51e11c5f743208632e8993124046"
package-installable = false
